tests/EraseSimp.lean.expected
tests/EraseSimp.lean:28:2: error: aesop: 'Nat.add_comm' is not registered (with the given features) in any rule set.
